# cppca2

./: main.cpp
cppProjectCA2/: CMakeLists.txt  bugs.txt  bugs_life_history_10-4-2024_14-17-4.txt  bugs_life_history_5-4-2024_12-23-14.txt  bugs_life_history_5-4-2024_16-41-53.txt  bugs_life_history_5-4-2024_16-43-35.txt  bugs_life_history_5-4-2024_17-49-49.txt  bugs_life_history_8-4-2024_16-6-20.txt  main.cpp
cppProjectCA2/headers/: Board.h  Bug.h  Crawler.h  GUI.h  Hopper.h  PlayerBug.h  Splitter.h
cppProjectCA2/source/: Board.cpp  Bug.cpp  Crawler.cpp  GUI.cpp  Hopper.cpp  Splitter.cpp
headers/: Board.h  Bug.h  Direction.h  GUI.h  Hopper.h  Splitter.h
source/: Board.cpp  Bug.cpp  Crawler.cpp  Hopper.cpp  PlayerBug.cpp  Splitter.cpp
